# microgridgams

./: README.md  gams_data_processing.ipynb  gams_data_processing_v2.ipynb  main.gms  pyproject.toml  run
data/: fault_time.csv  gen_nodes.csv  generator_data.csv  line_data.csv  nodeloadfactors.csv  timeseries.csv
data/zArchive/: timeseries24.gdx  timeseries_15min.csv
outputs/MGResults/: dispatch_results.gdx
zArchive/: gams_inputs.ipynb  gen24_Storage.lst  gen24_Storage.lxi  main.log~1  main.log~2  main.log~3  main.lxi  microgrid_optimization.gms  microgrid_optimization.log~1  microgrid_optimization.log~2  microgrid_optimization.log~3  microgrid_optimization.lst  microgrid_optimization.lxi  microgrid_optimization_2.gms  paste.gms  save_results.gms  test.gms  test.log~1  test.lst  testing_the_bugs.gms  testing_the_bugs.log~3  testing_the_bugs.lst  testing_the_bugs.lxi  transport1.py
