[tool.poetry]
name = "GAMS"
version = "0.1.0"
description = "Packages for GAMS project"
authors = ["Megan Kerins <megan.kerins@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
gdxpds = "^1.2.0"
numpy = "^1.20.2"
pandas = "^1.2.4"
h5py = "^3.2.1"
jupyterlab = "^3.0.14"
matplotlib = "^3.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
